--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar_az fixed-top">
       <a href="#" class="logo">
-        <img src="./images/ATOZ.png" alt="" />
+        <img src="./images/ATOZCRICKET.png" alt="" />
       </a>
  
       <ul class="nav-links_az">
@@ -63,7 +63,7 @@
       target="_blank"
     >
       <div class="hero_mob">
-        <img src="./images/Mahadev-Book-ID.webp" alt="" />
+        <img src="./images/ATOZBG.jpeg" alt="" />
       </div>
     </a>
  
@@ -900,7 +900,7 @@
     <footer class="footer_footer">
       <div class="container_footer">
         <div class="logo_section_footer">
-          <img src="./images/ATOZ.png" alt="Atozcricket" class="logo_footer" />
+          <img src="./images/ATOZCRICKET.png" alt="Atozcricket" class="logo_footer" />
           <p class="description_footer">
             Welcome to Atozcricket, your ultimate destination for an unparalleled online betting experience in India! Boost your excitement with our exclusive betting IDs for Cricket, Football, Casino, and much more, ensuring a thrilling adventure every time you play.
  
