--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       target="_blank"
     >
       <div class="hero_mob">
-        <img src="./images/ATOZBG.jpeg" alt="" />
+        <img src="./images/atoz_cricket.png" alt="" />
       </div>
     </a>
  
@@ -105,7 +105,7 @@
             class="col-md-6 col-12 mx-auto mb-4 d-flex justify-content-center"
           >
             <img
-              src="./images/mahadev_book-1.webp"
+              src="./images/big-bash-cricket-betting-tips.webp"
               alt=""
               class="img-fluid img-ab"
             />
@@ -629,7 +629,7 @@
             class="col-md-6 col-12 mx-auto mb-4 d-flex justify-content-center"
           >
             <img
-              src="./images/mahadev_book-1.webp"
+              src="./images/atozapp.jpg"
               alt=""
               class="img-fluid img-abs"
             />
